# eagle-200-collector

./: Dockerfile  README.md  pyproject.toml
src/eagle-200-collector/: main.py
static/css/: main.css
templates/: index.html
